--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <div class="sec1">
             <div class="div1">
-                    <img class="img1" src="./Summerhouse1.jpg" alt="">
+                    <img class="img1" src="./SummerHouse1.jpg" alt="">
                     <p class="p1">summer house</p>
             </div>
             <div class="div1">
